--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-calendario": "^3.5.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-switch": "^1.5.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
