--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-calendario": "^3.5.2",
+    "react-native-calendars": "^1.1304.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.1",
